objects/Travel_Approval__c.object
<CustomObject>
    <fields>
        <fullName>Billable_to_customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billable to customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Justification__c</fullName>
        <label>Business Justification</label>
        <length>65536</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Travel Approvals</relationshipLabel>
        <relationshipName>Travel_Approvals_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Destination__c</fullName>
        <inlineHelpText>For intra EU Travel please select domestic</inlineHelpText>
        <label>Destination</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Domestic</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <label>Event Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <label>Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Revenue (Sales)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Organization_new__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>i.e. Revenue (Sales), Operations, Marketing, Legal, Finance.</inlineHelpText>
        <label>Organization (see Help Text) --&gt;</label>
        <referenceTo>Organization__c</referenceTo>
        <relationshipLabel>Travel Approvals</relationshipLabel>
        <relationshipName>Travel_Approvals</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Trip__c</fullName>
        <label>Purpose of Trip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Indicator__c</fullName>
        <formula>IF( ISPICKVAL( Status__c , &apos;Approved&apos;) , IMAGE(&quot;/resource/StatusImages/thumbs-up.png&quot;, &quot;Accepted&quot;, 20, 20),
IF ( ISPICKVAL( Status__c , &apos;Rejected&apos;), IMAGE(&quot;/resource/StatusImages/thumbs-down.png&quot;, &quot;Rejected&quot;, 20, 20),
IMAGE(&quot;/resource/StatusImages/draft.png&quot;, &quot;In-Process&quot;, 20, 20)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Request</fullName>
                    <default>true</default>
                    <label>New Request</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Expenses__c</fullName>
        <label>Estimated Expenses</label>
        <summarizedField>Expense_Item__c.Amount__c</summarizedField>
        <summaryForeignKey>Expense_Item__c.Travel_Approval__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Trip_End_Date__c</fullName>
        <label>Trip End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trip_Start_Date__c</fullName>
        <label>Trip Start Date</label>
        <type>Date</type>
    </fields>
    <label>Travel Approval</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Organization_new__c</columns>
        <columns>Total_Expenses__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Status__c</columns>
        <columns>Trip_Start_Date__c</columns>
        <columns>Trip_End_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Open_Travel_Requests</fullName>
        <columns>NAME</columns>
        <columns>Organization_new__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Status__c</columns>
        <columns>Destination__c</columns>
        <columns>Trip_Start_Date__c</columns>
        <columns>Trip_End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>Open Travel Requests</label>
    </listViews>
    <listViews>
        <fullName>Pending_Travel_Approvals_WithoutExpenses</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Department__c</columns>
        <columns>Organization_new__c</columns>
        <columns>Total_Expenses__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Status__c</columns>
        <columns>Trip_Start_Date__c</columns>
        <columns>Trip_End_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Total_Expenses__c</field>
            <operation>equals</operation>
            <value>USD 0</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending Approval</value>
        </filters>
        <label>Pending Travel Approvals WithoutExpenses</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>TA-{00000}</displayFormat>
        <label>Travel Approval #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Travel Approvals</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Estimated_Expenses_Required_For_Approval</fullName>
        <active>true</active>
        <errorConditionFormula>ispickval (Status__c, &apos;Pending Approval&apos;) 
&amp;&amp;  (isblank(Total_Expenses__c ) || Total_Expenses__c = 0)</errorConditionFormula>
        <errorMessage>Please provide an estimate of Expenses.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Trip_end_date_after_start_date</fullName>
        <active>true</active>
        <errorConditionFormula>Trip_End_Date__c &lt; Trip_Start_Date__c</errorConditionFormula>
        <errorDisplayField>Trip_End_Date__c</errorDisplayField>
        <errorMessage>Trip end date must be greater than or equal to start date</errorMessage>
    </validationRules>
</CustomObject>